--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "omnipay/omnipay": "^3.2",
         "league/omnipay": "^3",
         "vlucas/phpdotenv": "^5.5",
-        "payum/iso4217": "*"
+        "alcohol/iso4217": "4.1.0"
     },
     "config": {
         "allow-plugins": {
